PVRTC compressed textures are failing with ANGLE backend https://bugs.webkit.org/show_bug.cgi?id=212240 <rdar://problem/63517385>

Reviewed by Ken Russell (representing ANGLE).

Source/ThirdParty/ANGLE:

The values used for the PVRTC formats were incorrect.

* src/libANGLE/formatutils.cpp:
(gl::BuildInternalFormatInfoMap):

LayoutTests:

Merge the upstream change to this test.

* webgl/1.0.3/resources/webgl_test_files/conformance/extensions/webgl-compressed-texture-pvrtc.html:

Canonical link: https://commits.webkit.org/225112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262044 268f45cc-cd09-0410-ab3c-d52691b4dbfc